# pyiron_lammps

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  setup.py
.ci_support/: check.py  environment-mpich.yml  environment-old.yml  environment-openmpi.yml  environment.yml
.github/workflows/: dependabot.yml  deploy.yml  pipeline.yml  pypicheck.yml  unittests-mpich.yml  unittests-old.yml  unittests-openmpi.yml
binder/: environment.yml
mypy_report/html/: index.html
mypy_report/html/html/pyiron_lammps/: output.py.html  structure.py.html  units.py.html
mypy_report/txt/: index.txt
notebooks/: example.ipynb
pyiron_lammps/: __init__.py  _version.py  calculation.py  control.py  decorator.py  output.py  output_raw.py  parallel.py  potential.py  structure.py  units.py
pyiron_lammps/compatibility/: atomistics.py  calculate.py  constraints.py  file.py  interactive.py  structure.py
src/lammpsparser/: __init__.py  output.py  structure.py
src/lammpsparser/compatibility/: calculate.py  file.py  structure.py
src/pyiron_lammps/: output.py  output_raw.py  structure.py
src/pyiron_lammps/compatibility/: calculate.py  constraints.py  file.py  structure.py
tests/: test_compatibility_file.py  test_constraints.py  test_control.py  test_elastic_base.py  test_elastic_parallel_single_core.py  test_elastic_parallel_two_cores.py  test_error_messages.py  test_evcurve.py  test_evcurve_base.py  test_evcurve_parallel_single_core.py  test_evcurve_parallel_two_cores.py  test_output.py  test_output_raw.py  test_potential.py  test_structure.py  test_units.py  test_water_compatibility_file.py
tests/static/: potentials_lammps.csv
tests/static/compatibility_output/: dump.out  log.lammps
tests/static/dump_chemical/: dump_AlH.out  dump_NiAlH.out  dump_NiH.out
tests/static/duplicate_compute/: dump.out
tests/static/full_job/: dump.out  log.lammps
tests/static/full_job_h5/: dump.h5  log.lammps
tests/static/jagged_dump/: dump.out
tests/static/mean_dump/: dump.out
tests/static/mean_values_non_ortho/: log.lammps
tests/static/multiple_thermo/: log.lammps
tests/static/no_pressure/: log.lammps
tests/static/warning_error_log/: log.lammps
