[build-system]
requires = [
    "ase", 
    "numpy", 
    "h5py", 
    "pandas", 
    "scipy", 
    "hatchling==1.28.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "lammpsparser"
description = "Vector-oriented LAMMPS interface to rapidly iterate over series of atomistic structures or interatomic potentials."
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ase==3.27.0",
    "numpy==2.4.2",
    "pandas==3.0.0",
    "scipy==1.17.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/lammpsparser"
Documentation = "https://github.com/pyiron/lammpsparser"
Repository = "https://github.com/pyiron/lammpsparser"

[project.optional-dependencies]
h5md = ["h5py==3.15.1"]

[tool.hatch.build]
include = [
    "src/lammpsparser"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/lammpsparser/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/lammpsparser"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/lammpsparser"
]

[tool.hatch.version]
source = "vcs"
path = "src/lammpsparser/_version.py"

[tool.coverage.run]
source = ["lammpsparser"]
command_line = "-m unittest discover tests"
